@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 1.3.0
 
 Author(s) : Juergen Knoedlseder
 
-15 March 2017
+16 March 2017
 
 
 1. Introduction
@@ -66,6 +66,7 @@ None
 
 8. Model module
 ---------------
+<<<<<<< 75428cb593eb469cbb2c5e92cd69369745621430
 <<<<<<< a04a0c419578a4a97a02adb16951d2025d2adfba
 Sky directions drawn by GModelSpatialDiffuseConst::mc() are now restricted
 to the simulation cone that has previously been defined using the mc_norm()
@@ -202,6 +203,10 @@ model pulsar light curves or the temporal variation of gamma-ray binaries
 =======
 None
 >>>>>>> Add GWcsGLS and GWcsSFL classes to support GLS and SFL WCS (#1851)
+=======
+The GModelSpectralNodes class now throws an exception if the energy or
+intensity of a node is set to a non-positive value (#990).
+>>>>>>> GModelSpectralNodes throws exception for non-positive energy or intensity (#990)
 
 
 9. Numerics module
