@@ -1,10 +1,11 @@
-2017-03-15
+2017-03-16
 
         * Version 1.3.0 released
         =========================
 
         GWcs now supports CD keywords instead of CDELT (#1951)
         Add GLS and SFL WCS projections (#1851)
+        GModelSpectralNodes throws exception for non-positive energy or intensity (#990)
 
 
 2017-02-24
